--- a/project-app/src/styling/app.css
+++ b/project-app/src/styling/app.css
@@ -6,4 +6,19 @@
 @import 'singleperson.css';
 @import 'react-bootstrap-table-next/dist/react-bootstrap-table2.min.css';
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
 
+.webpage {
+  background: url('https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80') !important ;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-width: 100vw;
+  min-height: 100vh;
+  z-index: 0;
+}
+
+.App {
+  font-family: 'Quantico', sans-serif;
+  min-height:100%;
+  margin:0 auto -5em;
+}
