--- a/project-app/src/styling/navbar.css
+++ b/project-app/src/styling/navbar.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
 
+.navbar{
+    --bs-nav-brand-color: white;
+}   
+.navbar-nav{
+    --bs-nav-link-hover-color:lightgray;
+    --bs-nav-link-disabled-color:white;
+}   
+    
 .missions{
     color:white;
+    transition: ease-in-out 0.3s;
 }
 
 .navbar.container{
@@ -22,4 +31,13 @@
     display:flex;
     color:white;
     opacity: 100%;
+    transition: ease-in-out 0.3s;
+}
+
+.webpage-title:hover{
+    color: lightgray; 
+}
+
+.webpage-title:focus{
+    color: white;
 }
