--- a/project-app/src/styling/personnel.css
+++ b/project-app/src/styling/personnel.css
@@ -8,6 +8,25 @@
 
 .mainsearch{
     margin: 1em;
-    margin-top: -1em;
+    margin-top: -0.7em;
     margin-left: 2.3em;
+}
+
+.table-div{
+    margin:2.3em;
+    margin-top: 0em;
+    overflow: auto;
+    height: 50em;
+}
+
+.nav-buttons{
+    display:flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.homepage-button-personnel{
+    display:flex;
+    align-self: center;
+    margin-right: 2.3em;
 }
