--- a/project-app/src/styling/singlemission.css
+++ b/project-app/src/styling/singlemission.css
@@ -49,8 +49,18 @@
   display:flex;
   flex-direction: column;
   margin-bottom: 1em;
-  align-items: center;
+  text-align: center;
   justify-content: center;
+  flex-wrap: wrap;
+}
+.mission-dates{
+  display:flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+  text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 1.2vh;
 }
 .mission-header{
   display:flex;
@@ -62,6 +72,7 @@
   text-align: center;
   text-decoration: underline;
   position: relative;
+  justify-content: center;
 }
 .assigned-teams{
   display:flex;
